fixed blog overflow on index

--- a/static/styles.css
+++ b/static/styles.css
@@ -59,9 +59,9 @@ a.search_result
     display: -webkit-box;
     -webkit-line-clamp: 3; /* number of lines to show */
     -webkit-box-orient: vertical;
-    margin-bottom: 5px;    
-    white-space: nowrap;
+    margin-bottom: 5px; 
     vertical-align: middle;
+    word-wrap: break-word;
     
  }
 
